# ChillBoss

./: CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: code-quality.yml  main.yml  publish.yml  publish_test.yml  python-app.yml  python-package.yml
chillboss/: __init__.py  __main__.py  loggers.py  mouse.py
docs/: .buildinfo  conf.py  genindex.html  index.html  index.rst  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/chillboss/: loggers.html  mouse.html
docs/_sources/: index.rst.txt
docs/_sources/docstring/: chillboss.rst.txt  modules.rst.txt
docs/_sources/docstrings/: chillboss.rst.txt
docs/docstring/: chillboss.html  modules.html
docs/docstrings/: chillboss.html  modules.html
docs/source/: conf.py  index.rst
happyboss/: __init__.py  __main__.py  main.py  move.py
tests/: conftest.py  test_chillboss.py  test_happyboss.py  test_move.py
