[tool.poetry]
name = "HappyBoss"
version = "0.1.0"
description = ""
authors = ["NaveenKumarReddy8 <mr.naveen8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
PyAutogui = "^0.9.50"
pytest-cov = "^2.10.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.782"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
